--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,48 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.container {
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  text-align: left;
+  background-color: #fff;
+  padding: 20px;
+  border: 2px solid;
+  border-top: none;
+}
+
+.form-group {
+  margin-bottom: 1rem;
+}
+
+@media (min-width: 1400px) {
+  .container {
+    max-width: 500px !important;
+  }
+}
+
+.header{
+  height: 200px;
+  width: 500px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 500px;
+  color: #fff;
+  font-weight: bold;
+  padding-top: 120px;
+  font-size: 1.5em;
+}
+
+.welcome-text{
+  font-weight: bold;
+  padding-top: 20px;
+  font-size: 1.5em;
+  border-left: 2px solid;
+  border-right: 2px solid;
+  margin: auto;
+  width: 500px;
+}
