--- a/src/index.css
+++ b/src/index.css
@@ -17,13 +17,18 @@ code {
   font-weight: 400;
   line-height: 1.5;
   color: #212529;
-  text-align: left;
   background-color: #fff;
-  padding: 20px;
+  padding: 10px;
   border: 2px solid;
   border-top: none;
 }
 
+.reg-container{
+  text-align: left;
+}
+.otp-container{
+  text-align: center;
+}
 .form-group {
   margin-bottom: 1rem;
 }
@@ -49,10 +54,24 @@ code {
 
 .welcome-text{
   font-weight: bold;
-  padding-top: 20px;
+  padding: 20px 0;
   font-size: 1.5em;
-  border-left: 2px solid;
-  border-right: 2px solid;
+  /* border-left: 2px solid; */
+  /* border-right: 2px solid; */
   margin: auto;
   width: 500px;
+}
+
+.otpContainer {
+  margin: 5% auto;
+}
+
+.otpInput {
+  width: 3rem !important;
+  height: 3rem;
+  margin: 0 1rem;
+  font-size: 2rem;
+  text-align: center;
+  border-radius: 4px;
+  border: 1px solid rgba(0, 0, 0, 0.3);
 }
